2007-05-16  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HtmlTextWriter.cs: refactoring, created hashtables for tags, styles
	and attributes arrays, that gives performance improvement in GetTagKey
	GetStyleKey and GetAttributeKey methods

2007-05-15  Marek Habersack  <mhabersack@novell.com>

	* TemplateControl.cs: implemented the 3-parameter overloads of
	GetLocalResourceObject and GetGlobalResourceObject.

	* TemplateParser.cs: refactoring - use HttpApplication.LoadType to
	actually look up types.
	
	* ControlBuilder.cs: as above	

2007-05-14  Marek Habersack  <mhabersack@novell.com>

	* ClientScriptManager.cs: put the hidden field within a <div>, the
	way MS.NET does it.

2007-05-11  Gert Driesen  <drieseng@users.sourceforge.net>

	* ControlBuilder.cs: Fixed exception message in MapType.

2007-05-10  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: small formatting change

2007-05-10 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: ExecuteRegisteredAsyncTasks:
	implimentation for TARGET_JVM doesn't use WaitHandle.WaitAll, but WaitOne

2007-05-09  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HtmlTextWriter.cs: used classes instead of sctrucs in TARGET_JVM for
	AddedTag, AddedStyle and AddedAttr members
	* TemplateControl.jvm.cs: refactored CachedString method

2007-05-09  Marek Habersack  <mhabersack@novell.com>

	* CollectionBuilder.cs: formatting changes

	* ControlBuilder.cs: if a control enables children as properties,
	has a default property and parser encounters a child tag/container
	with the default property name, discard the default property
	builder in order to avoid invalid sub builder invocation. An
	example is: <asp:DropDownList><Items></Items></asp:DropDownList>
	Formatting changes.
	When checking for empty string, use Length not comparison with ""
	
2007-05-08  Marek Habersack  <mhabersack@novell.com>

	* CssStyleCollection.cs: put the style in the bag each time a key
	is set, otherwise resetting of a key has no effect on rendered